--- a/gallery.html
+++ b/gallery.html
@@ -67,7 +67,7 @@
             I hope you enjoy browsing my page. I expect you to revisit my page soon. I am so grateful for your visit that I am at a loss for words. The mere fact that you visited my page improved my day. Feel free to leave a comment for me to enhance my page.
             <br>
             <br>
-            <button onclick="document.location='home.html'"><b>Home</b></button>
+            <button onclick="document.location='index.html'"><b>Home</b></button>
             <br>
             <button onclick="document.location='education.html'"><b>Education</b></button>
             <br>
